Added user list endpoint.
